[gd_scene load_steps=18 format=3 uid="uid://dlpjneylmq7g1"]

[ext_resource type="Script" path="res://scripts/base_player.gd" id="1_1ogni"]
[ext_resource type="Shader" uid="uid://dm8gkgab7s5aj" path="res://shader/hit_flash.tres" id="2_gkcq1"]
[ext_resource type="Texture2D" uid="uid://di4skgufumap" path="res://src/permobte.png" id="3_g42m6"]
[ext_resource type="Texture2D" uid="uid://d3kqy1ahxx6rs" path="res://src/sword 16_16.png" id="4_bjf27"]

[sub_resource type="CircleShape2D" id="CircleShape2D_j2mp3"]
radius = 130.062

[sub_resource type="Animation" id="Animation_lu3is"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:material:shader_parameter/enabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_lxqoi"]
resource_name = "flash"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:material:shader_parameter/enabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_su0w2"]
_data = {
"RESET": SubResource("Animation_lu3is"),
"flash": SubResource("Animation_lxqoi")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_84glh"]
shader = ExtResource("2_gkcq1")
shader_parameter/enabled = false
shader_parameter/tint = Color(1, 1, 1, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_o2lve"]
size = Vector2(128, 128)

[sub_resource type="Animation" id="Animation_fxu10"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(89, -81)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_2xjrd"]
resource_name = "attack_down"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(89, -81), Vector2(89, 77)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, -3.14159]
}

[sub_resource type="Animation" id="Animation_x8pus"]
resource_name = "attack_up"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(89, 77), Vector2(89, -81)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-3.14159, 0.0]
}

[sub_resource type="Animation" id="Animation_224ia"]
resource_name = "attack_down_left"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-89, -81), Vector2(-89, 77)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, -3.14159]
}

[sub_resource type="Animation" id="Animation_eblf6"]
resource_name = "attack_up_2"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-89, 77), Vector2(-89, -81)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-3.14159, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rl5ao"]
_data = {
"RESET": SubResource("Animation_fxu10"),
"attack_down": SubResource("Animation_2xjrd"),
"attack_down_left": SubResource("Animation_224ia"),
"attack_up": SubResource("Animation_x8pus"),
"attack_up_2": SubResource("Animation_eblf6")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6yn4e"]
size = Vector2(66.05, 20)

[node name="Player" type="CharacterBody2D" groups=["player"]]
collision_layer = 3
collision_mask = 3
script = ExtResource("1_1ogni")
metadata/_edit_group_ = true

[node name="player_hitbozz" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="player_hitbozz"]
shape = SubResource("CircleShape2D_j2mp3")

[node name="PAttackCooldown" type="Timer" parent="."]
process_callback = 0

[node name="AfterDamageInvincibility" type="Timer" parent="."]

[node name="FlashAnimation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_su0w2")
}

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_84glh")
position = Vector2(3.5, -3.8147e-06)
scale = Vector2(0.458484, 0.475836)
texture = ExtResource("3_g42m6")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="."]
position = Vector2(3, 0)
shape = SubResource("RectangleShape2D_o2lve")

[node name="AttackBody" type="CharacterBody2D" parent="." groups=["sword"]]
light_mask = 0
position = Vector2(89, -81)
scale = Vector2(1.0084, 1)
motion_mode = 1

[node name="Sprite2D" type="Sprite2D" parent="AttackBody"]
scale = Vector2(1.22144, -4.09151)
texture = ExtResource("4_bjf27")

[node name="Attack_animation" type="AnimationPlayer" parent="AttackBody"]
libraries = {
"": SubResource("AnimationLibrary_rl5ao")
}

[node name="weapon_area_detection" type="Area2D" parent="AttackBody"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackBody/weapon_area_detection"]
rotation = 1.5708
shape = SubResource("RectangleShape2D_6yn4e")

[connection signal="body_entered" from="player_hitbozz" to="." method="_on_player_hitbozz_body_entered"]
[connection signal="body_exited" from="player_hitbozz" to="." method="_on_player_hitbozz_body_exited"]
[connection signal="timeout" from="PAttackCooldown" to="." method="_on_p_attack_cooldown_timeout"]
[connection signal="timeout" from="AfterDamageInvincibility" to="." method="_on_after_damage_invincibility_timeout"]
[connection signal="body_entered" from="AttackBody/weapon_area_detection" to="." method="_on_weapon_area_detection_body_entered"]
